# tokengen-rs

./: Cargo.toml  LICENSE.md  README.md
tokengen-cli/: Cargo.toml
tokengen-cli/src/: main.rs
tokengen-core/: Cargo.toml
tokengen-core/src/: lib.rs
tokengen-web/: Cargo.toml
tokengen-web/src/: main.rs
