[package]
name = "tokengen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
tokengen-core = { version = "0.1.0", path = "../tokengen-core"}
