[package]
name = "tokengen-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API for tokengen-core"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.167", features = ["derive"]}
serde_json = "1.0.100"
tokengen-core = { version = "0.1.0", path = "../tokengen-core"}
